# rust-actions

./: .gitmodules  Cargo.toml  README.md  loader.js  rev.js
actions/: Cargo.toml
actions/src/: main.rs
actions/yml/: hello-world.yml
cache-api/: Cargo.toml  README.md
cache-api/examples/: cache_util.rs
cache-api/src/: lib.rs
hello-world/: action.yml  main.js
linux-x64/: sccache.zst
scripts/: dist.sh
