[package]
name = "rust-actions-cache-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.15.0", default-features = false, features = ["io-util"] }
tracing = "0.1.29"

[dev-dependencies]
color-eyre = "0.5.11"
log = "0.4.14"
reqwest = { version = "0.11.8", features = ["native-tls-vendored"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
