[package]
name = "rust-actions-cache-api"
version = "0.1.1"
edition = "2021"
description = "GitHub Actions Cache API client for actions written in Rust."
license = "0BSD"
repository = "https://github.com/jix/rust-actions/tree/main/cache-api"
categories = ["api-bindings", "caching", "development-tools"]
keywords = ["github", "actions", "gha", "cache"]

[dependencies]
bytes = "1.1.0"
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.15.0", default-features = false, features = ["io-util"] }
tracing = "0.1.29"

[dev-dependencies]
color-eyre = "0.5.11"
log = "0.4.14"
reqwest = { version = "0.11.8", features = ["native-tls-vendored"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
